# microai

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: song_titles.txt
microai/autograd/: __init__.py  core.py  utils.py
microai/models/: gan.py  resnet.py  transformer.py
microai/nn/: activations.py  layers.py  losses.py  modules.py  optimizers.py  schedulers.py
notebooks/: autograd.ipynb  nn.ipynb
notebooks/nlp/: neural_probabilistic_language_model.ipynb
notebooks/papers/: attention_is_all_you_need.ipynb  deep_residual_learning_for_image_recognition.ipynb  generative_adversarial_networks.ipynb  neural_probabilistic_language_model.ipynb
