[tool.poetry]
name = "microai"
version = "0.1.0"
description = ""
authors = ["Aleksa Sukovic <sukovic.aleksa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.26.0"
torch = "^2.1.1"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
graphviz = "^0.20.1"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
